--- a/下拉框过渡效果(高度自适应)/index.html
+++ b/下拉框过渡效果(高度自适应)/index.html
@@ -6,10 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>实现下拉框过渡效果(高度自适应)</title>
     <style>
-
+        *{
+            padding: 0;
+            margin: 0;
+        }
+        main{
+            margin: 50px;
+        }
+        main input{
+            width: 100px;
+        }
+        main section{
+            height: 0;
+            overflow-y: hidden;
+            width: 100px;
+        }
+        main section p{
+            width: 100%;
+        }
     </style>
 </head>
 <body>
-    
+    <main>
+        <input type="text" class="input">
+        <section class="list">
+            <p>测试+1</p>
+            <p>测试+1</p>
+            <p>测试+1</p>
+            <p>测试+1</p>
+            <p>测试+1</p>
+            <p>测试+1</p>
+        </section>
+    </main>
+    <script>
+        /**
+         * 聚焦 先设置list高度为auto 获取offsetHeight,然后再将list高度设置为 0 强制回流 添加过渡 赋值高度 
+         * 失焦 list高度设置为 0
+         * 总结: 聚焦展开下拉 过程就是 计算实时高度 从 0 过渡到 指定高度
+        */
+        let input = document.querySelector('.input');
+        let list = document.querySelector('.list');
+        input.onfocus = () => {
+            list.style.border = '1px solid green'
+            list.style.borderTop = 'none'
+            list.style.transition = 'none';
+
+            list.style.height = 'auto';
+            let getHeight = list.offsetHeight;
+            list.style.height = 0;
+            list.offsetHeight   // offsetHeight 属性会 引起回流 高度回到0
+            list.style.transition = '1s';
+            list.style.height = getHeight + 'px';
+        }
+        input.onblur = () => {
+            list.style.height = 0;
+            list.style.transition = '1s';
+            list.style.border = 'none'
+        }
+    </script>  
 </body>
 </html>
