可视化 编辑 代码优化

--- a/css样式可视化编辑/index.html
+++ b/css样式可视化编辑/index.html
@@ -34,7 +34,9 @@
         css 可视化编辑 任何 HTML 元素都可以编辑
     </main>
     <div class="content">
-        <style contenteditable style="display:block;width:80%;white-space:pre;height: 50%;border: none;">
+        <style contenteditable style="display:block;
+        width:80%;white-space:pre;height: 50%;
+        border: none;color:black">
             *{
                 margin: 0;
                 padding: 0;
