歌词数据处理&公共函数

--- a/歌词滚动效果/index.html
+++ b/歌词滚动效果/index.html
@@ -30,7 +30,7 @@
             width: 5px;
         }
         section ul {
-            list-style-type: none;
+            list-style: none;
             transition: 0.2s;
         }
         section ul li {
@@ -132,5 +132,9 @@
           
         </ul>
     </section>
+
+    <script src="./js/data.js" ></script>
+    <script src="./js//index.js" ></script>
+
 </body>
 </html>
