歌词滚动效果 开发完成

--- a/歌词滚动效果/index.html
+++ b/歌词滚动效果/index.html
@@ -18,17 +18,17 @@
         }
         audio {
             width: 45%;
-            margin: 30px 0px;
+            margin: 30px 0px 15px 0px;
         }
         section {
             height: 75vh;
             width: 60%;
-            overflow: auto;
+            overflow: hidden;
             margin-left: 20%;
         }
-        section::-webkit-scrollbar {
+        /* section::-webkit-scrollbar {
             width: 5px;
-        }
+        } */
         section ul {
             list-style: none;
             transition: 0.2s;
@@ -51,85 +51,6 @@
     <audio controls src="./assets//music.mp3"></audio>
     <section>
         <ul>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-            <li>歌词1</li>
-          
         </ul>
     </section>
 
