--- a/购物车 效果/index.html
+++ b/购物车 效果/index.html
@@ -28,62 +28,7 @@
         <div class="menu-item"><span>轻食甜品</span></div>
         <div class="menu-item"><span>热卖套餐</span></div>
       </div>
-      <div class="goods-list">
-        <div class="goods-item">
-          <img src="./assets/g1.png" alt="" class="goods-pic" />
-          <div class="goods-info">
-            <h2 class="goods-title">椰云拿铁</h2>
-            <p class="goods-desc">
-              1人份【年度重磅，一口吞云】 √原创椰云topping，绵密轻盈到飞起！
-              原创瑞幸椰云™工艺，使用椰浆代替常规奶盖
-              打造丰盈、绵密，如云朵般细腻奶沫体验 椰香清甜饱满，一口滑入口腔
-              【饮用建议】请注意不要用吸管，不要搅拌哦~
-            </p>
-            <p class="goods-sell">
-              <span>月售 200</span>
-              <span>好评率95%</span>
-            </p>
-            <div class="goods-confirm">
-              <p class="goods-price">
-                <span class="goods-price-unit">￥</span>
-                <span>32</span>
-              </p>
-              <div class="goods-btns">
-                <i class="iconfont i-jianhao"></i>
-                <span>0</span>
-                <i class="iconfont i-jiajianzujianjiahao"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="goods-item">
-          <img src="./assets/g1.png" alt="" class="goods-pic" />
-          <div class="goods-info">
-            <h2 class="goods-title">椰云拿铁</h2>
-            <p class="goods-desc">
-              1人份【年度重磅，一口吞云】 √原创椰云topping，绵密轻盈到飞起！
-              原创瑞幸椰云™工艺，使用椰浆代替常规奶盖
-              打造丰盈、绵密，如云朵般细腻奶沫体验 椰香清甜饱满，一口滑入口腔
-              【饮用建议】请注意不要用吸管，不要搅拌哦~
-            </p>
-            <p class="goods-sell">
-              <span>月售 200</span>
-              <span>好评率95%</span>
-            </p>
-            <div class="goods-confirm">
-              <p class="goods-price">
-                <span class="goods-price-unit">￥</span>
-                <span>32</span>
-              </p>
-              <div class="goods-btns">
-                <i class="iconfont i-jianhao"></i>
-                <span>0</span>
-                <i class="iconfont i-jiajianzujianjiahao"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="goods-list"></div>
     </div>
     <div class="footer">
       <div class="footer-car-container">
