--- a/购物车 效果/index.html
+++ b/购物车 效果/index.html
@@ -48,9 +48,9 @@
       </div>
     </div>
 
-    <div class="add-to-car">
+    <!-- <div class="add-to-car">
       <i class="iconfont i-jiajianzujianjiahao"></i>
-    </div>
+    </div> -->
 
     <script src="./js/data.js"></script>
     <script src="./js/index.js"></script>
