完成 vue2 属性响应

--- a/vue相关案例/vue2数据响应式/index.html
+++ b/vue相关案例/vue2数据响应式/index.html
@@ -13,9 +13,10 @@
       <p id="lastName"></p>
       <p id="age"></p>
     </div>
-    <!-- <input type="text" oninput="user.name = this.value" /> -->
-    <!-- <input type="date" onchange="user.birth = this.value" /> -->
-    <!-- <script src="./euv.js"></script> -->
+    <input type="text" oninput="user.name = this.value" />
+    <input type="date" onchange="user.birth = this.value" />
+    
+    <script src="./euv.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
