--- a/下拉框过渡效果(高度自适应)/index.html
+++ b/下拉框过渡效果(高度自适应)/index.html
@@ -40,7 +40,7 @@
     </main>
     <script>
         /**
-         * 聚焦 先设置list高度为auto 获取offsetHeight,然后再将list高度设置为 0 强制回流 添加过渡 赋值高度 
+         * 聚焦 先设置list高度为auto 获取offsetHeight,然后再将list高度设置为 0 强制渲染 添加过渡 赋值高度 
          * 失焦 list高度设置为 0
          * 总结: 聚焦展开下拉 过程就是 计算实时高度 从 0 过渡到 指定高度
         */
