--- a/vue相关案例/vue2数据响应式/index.html
+++ b/vue相关案例/vue2数据响应式/index.html
@@ -13,7 +13,7 @@
       <p id="lastName"></p>
       <p id="age"></p>
     </div>
-    <input type="text" oninput="user.name = this.value" />
+    <input type="text" oninput="user.name = this.value" placeholder="请输入姓名" />
     <input type="date" onchange="user.birth = this.value" />
     
     <script src="./euv.js"></script>
