柯里化  compose 组合函数

--- a/JS 应用/变量比较数字案例/index.html
+++ b/JS 应用/变量比较数字案例/index.html
@@ -9,7 +9,7 @@
 <body>
     <script>
         /**
-         * 对象转数字  == 会转换数据类型  经历详细步骤 valueOf => toString
+         * 对象转数字  == 会转换数据类型  经历详细步骤 valueOf  toString
         */
         let a  = [1,2,3];
         a.toString = a.shift;
