--- a/JS 应用/函数防抖节流/index.html
+++ b/JS 应用/函数防抖节流/index.html
@@ -18,10 +18,11 @@
         */
         let btn = document.querySelector('#btn');
         const sendServer = function (e) {
-            console.log('请求服务器',e.target);
+            console.log('请求服务器',e);
         }
-
+        
         btn.onclick = utils.debounce(sendServer,500)
+ 
    
     </script>
 </body>
