数据类型检测

--- a/JS 应用/数据类型监测/Object.html
+++ b/JS 应用/数据类型监测/Object.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Object.prototype.tostring.call</title>
+    <title>Object.prototype.toString.call</title>
 </head>
 <body>
-    
+    <!-- 
+        Object.prototype.toString.call([value])
+        标准检测数据类型方法 Object.prototype.toString 不是返回字符串 时返回当前实例所属类的信息
+     -->
 </body>
 </html>
