手写Promise>Promise的基本实现

--- a/JS 设计模式/6 发布订阅者模式.html
+++ b/JS 设计模式/6 发布订阅者模式.html
@@ -7,6 +7,9 @@
     <title>发布订阅者 模式</title>
 </head>
 <body>
+    <!-- 
+        Publish & Subscribe  发布订阅者 模式
+     -->
     <script>
         
     </script>
