实现点击右侧按钮 无限滚动效果

--- a/轮播图/index.html
+++ b/轮播图/index.html
@@ -73,6 +73,8 @@
         <div class="img-list">
             <img src="../image/10e3c075078d14e484419332aa7092b9.jpeg">
             <img src="../image/b8bd1d8b7bddd79991509843900c316c.jpeg">
+            <img src="../image/10e3c075078d14e484419332aa7092b9.jpeg">
+            <img src="../image/b8bd1d8b7bddd79991509843900c316c.jpeg">
         </div>
         <section class="arrow">
             <div class="arrow-left">⬅</div>
@@ -84,8 +86,10 @@
             <li></li>
         </ul>
     </main>
+    <script src="./index.js"></script>
     <script>
-
+        let swiper = new Swiper();
+        console.log('swiper',swiper);
     </script>
 </body>
 </html>
