小圆点 点击事件 && 高亮显示

--- a/轮播图/index.html
+++ b/轮播图/index.html
@@ -81,9 +81,10 @@
             <div class="arrow-right">➡</div>
         </section>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="circle" data-ids="0"></li>
+            <li class="circle" data-ids="1"></li>
+            <li class="circle" data-ids="2"></li>
+            <li class="circle" data-ids="3"></li>
         </ul>
     </main>
     <script src="./index.js"></script>
