--- a/轮播图/index.html
+++ b/轮播图/index.html
@@ -32,6 +32,7 @@
             position: absolute;
             top: 50%;
             left: 0;
+            transform:translateY(-50%);
             display: flex;
             width: 100%;
             justify-content: space-between;
